Fix website page scrollbar problem

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/earlyaccess/cwtexyen.css");
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import 'app/assets/css/special-property.scss';
 
 * {
     font-family: 'Ubuntu', sans-serif, 'cwTeXYen';
@@ -13,4 +14,15 @@ body {
 
 body {
     margin     : 0;
+}
+
+.info-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: height(infoBar);
+  font-size: 24px;
+  color: white;
+  background-color: #438EB9;
 }
